update contract addresses

--- a/ecosystem/create-to-earn.mdx
+++ b/ecosystem/create-to-earn.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Create To Earn"
-description: "Welcome to Heurist's Create-to-Earn campaign, where your creativity is rewarded with ZK Tokens! As a protocol recipient of 2.4M ZK Token airdrop, Heurist is dedicated to giving them away to super-charge community growth."
+description: "Welcome to Heurist's Create-to-Earn campaign, where your creativity is rewarded with HEU Tokens!
 ---
 
 Join the campaign here: [https://imagine.heurist.ai/campaign](https://imagine.heurist.ai/campaign)
@@ -32,11 +32,11 @@ If you're unsure what to create, take a look at past images in [zkImagine collec
 
 ### Reward Pools
 
-Rewards are distributed in weekly sprints. Only those with ZK token rewards >= 10 can receive rewards. You can claim your rewards at any time after the previous sprint rewards are distributed.
+Rewards are distributed in weekly sprints. Only those with HEU token rewards >= 10 can receive rewards. You can claim your rewards at any time after the previous sprint rewards are distributed.
 
 #### Pool 1: Minting Rewards
 
-Pool 1 has a cap that is refreshed every sprint. Before the cap is reached, you can earn 1 ZK token from Pool 1 for every NFT you mint.
+Pool 1 has a cap that is refreshed every sprint. Before the cap is reached, you can earn 0.6 HEU token from Pool 1 for every NFT you mint.
 
 #### Pool 2: Leaderboard Rewards
 
@@ -48,7 +48,7 @@ Pool 1 has a cap that is refreshed every sprint. Before the cap is reached, you 
 
 * Share your referral link. Both the referrer and the referee get 1 additional score for every paid mint.
 
-* Top 40 users on the leaderboard share ZK tokens from Pool 2 at the snapshot of the end of each sprint.
+* Top 40 users on the leaderboard share HEU tokens from Pool 2 at the snapshot of the end of each sprint.
 
 ### Pool 2 Reward Rules
 
