--- a/protocol-overview/contract-addresses.mdx
+++ b/protocol-overview/contract-addresses.mdx
@@ -7,15 +7,17 @@ title: "Contract Addresses"
 | Name   | Network     | Link |
 |--------|-------------|------|
 | HEU    | ETH Mainnet | https://etherscan.io/token/0xec463D00aa4dA76fb112cD2e4AC1C6BeF02da6ea |
-| StHEU  | ETH Mainnet |      |
 | HEU    | ZKsync Era  |https://explorer.zksync.io/address/0xAbEc5eCBe08b6c02F5c9A2fF82696e1E7dB6f9bf|
-| StHEU  | ZKsync Era  |      |
+| StHEU  | ZKsync Era  |https://explorer.zksync.io/address/0x96aB6e45ed742829b32f661EEA1FC90E04Af54D5|
+| HEU    | Base        |https://basescan.org/address/0xEF22cb48B8483dF6152e1423b19dF5553BbD818b|
+| StHEU  | Base        |https://basescan.org/address/0x89f9f593d2957bec9dc1ac58068a115961109ae9|
 
-# Mining Contracts
+# Airdrop Claim Contracts
 
-| Name            | Link                                                                                                                                |
-|-----------------|-------------------------------------------------------------------------------------------------------------------------------------|
-| HeuristMinerSBT | [https://sepolia.explorer.zksync.io/address/0x7798de1aE119b76037299F9B063e39760D530C10#contract](https://sepolia.explorer.zksync.io/address/0x7798de1aE119b76037299F9B063e39760D530C10#contract) |
+| Network     | Link |
+|-------------|------|
+| ZKsync Era  |https://explorer.zksync.io/address/0xA2C79d08Bb1Ac896eEAb1eB3Cae1c19bdB25d2ff|
+| Base        |https://basescan.org/address/0xCf84821b828Fb21f531A02DD5f30fb029757E30C|
 
 # zkImagine and Create-to-Earn Contracts
 
