restructure dev docs

--- a/ecosystem/create-to-earn.mdx
+++ b/ecosystem/create-to-earn.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Create To Earn"
-description: "Welcome to Heurist's Create-to-Earn campaign, where your creativity is rewarded with HEU Tokens!
+description: "Welcome to Heurist's Create-to-Earn campaign, where your creativity is rewarded with HEU Tokens!"
 ---
 
 Join the campaign here: [https://imagine.heurist.ai/campaign](https://imagine.heurist.ai/campaign)
@@ -44,7 +44,7 @@ Pool 1 has a cap that is refreshed every sprint. Before the cap is reached, you 
 
 * Each NFT minted increases your score by 1
 
-* Gain additional scores by sharing on X (Twitter) and uploading to Gateway Network
+* Gain additional scores by sharing on X (Twitter) and uploading to [Gateway Network](https://gateway.tech/)
 
 * Share your referral link. Both the referrer and the referee get 1 additional score for every paid mint.
 
