--- a/protocol-overview/tokenomics.mdx
+++ b/protocol-overview/tokenomics.mdx
@@ -25,7 +25,7 @@ HEU (pronounced as "hue") is the native token of Heurist Protocol. The maximum s
 | --------------------------------------- | ------------ | ----------------- | ------------ | -------------- | ---------------------- |
 | Season 1 Testnet Miners (11k addresses) | 50,000,000   | 5.00              | 100          | 0              | 0                      |
 | Liquidity                               | 28,000,000   | 2.80              | 100          | 0              | 0                      |
-| Marketing Reserve                       | 18,500,000   | 1.85              | 100          | 0              | 0                      |
+| Marketing                               | 18,500,000   | 1.85              | 100          | 0              | 0                      |
 | Imaginaries NFT Airdrop                 | 12,845,000   | 1.28              | 100          | 0              | 0                      |
 | Grants Program                          | 300,000      | 0.03              | 100          | 0              | 0                      |
 | KOLs                                    | 6,500,000    | 0.65              | 20           | 0              | 6                      |
@@ -41,10 +41,11 @@ HEU (pronounced as "hue") is the native token of Heurist Protocol. The maximum s
 | --------------------------------- | ------------------ |
 | Airdrop to miners                 | 50000000           |
 | Airdrop to Imaginaries            | 12845000           |
-| Ecosystem Grants                  | 300000             |
+| Airdrop to OG and ZKsync ecosystem| 600000             |
+| Grants                            | 300000             |
 | KOLs                              | 1300000            |
 | Initial Liquidity (DEX and CEX)   | 28000000           |
-| Marketing Reserve                 | 18500000           |
+| Marketing Reserve                 | 17900000           |
 
 {/*<img 
     src="..\images\protocol-overview\heu_supply.png" 
