--- a/protocol-overview/tokenomics.mdx
+++ b/protocol-overview/tokenomics.mdx
@@ -41,11 +41,11 @@ HEU (pronounced as "hue") is the native token of Heurist Protocol. The maximum s
 | --------------------------------- | ------------------ |
 | Airdrop to miners                 | 50000000           |
 | Airdrop to Imaginaries            | 12845000           |
-| Airdrop to OG and ZKsync ecosystem| 600000             |
+| Airdrop to OG and ZKsync ecosystem| 1000000            |
 | Grants                            | 300000             |
 | KOLs                              | 1300000            |
 | Initial Liquidity (DEX and CEX)   | 28000000           |
-| Marketing Reserve                 | 17900000           |
+| Marketing Reserve                 | 17500000           |
 
 {/*<img 
     src="..\images\protocol-overview\heu_supply.png" 
