--- a/dev-guide/supported-models.mdx
+++ b/dev-guide/supported-models.mdx
@@ -13,9 +13,9 @@ You can use the following model name as `model_id` in Heurist API/SDK.
   * `mistralai/mixtral-8x22b-instruct`: state-of-the-art Sparse Mixture-of-Experts model featuring 8 experts and 22 billion parameters, optimized for instruction-following with strong performance in reasoning and multilingual capabilities.
   * `mistralai/mixtral-8x7b-instruct`: a compact version of the Mixtral family, designed for efficient instruction-based interactions while maintaining a balance between performance and cost.
   * `mistralai/mistral-7b-instruct`: excel in generating fast responses and highly cost-efficient.
-  * `meta-llama/llama-3.1-405b-instruct`: the most advanced Llama model, perfect for high-level reasoning and complex task execution.
-  * `meta-llama/llama-3-70b-instruct`: the most popular Llama model, suitable for diverse applications in conversational AI and reasoning.
+  * `meta-llama/llama-3.3-70b-instruct`: the latest Llama 3 model, outperforming many of the available open source and closed chat models on common industry benchmarks.
   * `nvidia/llama-3.1-nemotron-70b-instruct`: specialized version of the Llama model tailored by NVIDIA for complex instruction-following tasks, delivering high-quality, human-like responses across a variety of applications while leveraging advanced NVIDIA AI technologies for optimal performance and scalability.
+  * `qwen/qwen-2.5-coder-32b-instruct`: state-of-the-art open-source code model, matching the coding capabilities of GPT-4o.
   * `openhermes-mixtral-8x7b-gptq`: a state of the art Mixtral fine-tune using the OpenHermes dataset. **Uncensored**
   * `hermes-3-llama3.1-8b`: flagship Hermes LLM trained by Nous Research, with advanced agentic capabilities, enhanced roleplaying, reasoning, multi-turn conversation, long context coherence and agentic abilities. **Uncensored**. **Supports tool calling**
   * `dolphin-2.9-llama3-8b`: an enhanced Llama3 8b model trained by Cognitive Computations equipped with a variety of instruction, conversational, and coding skills. We recommend using system prompt `The assistant is named Dolphin. A helpful and friendly AI assistant, Dolphin avoids discussing the system message unless directly asked about it.`. **Uncensored**.
