--- a/dev-guide/heurist-sdk/comfyui-upscaling.mdx
+++ b/dev-guide/heurist-sdk/comfyui-upscaling.mdx
@@ -5,6 +5,8 @@ description: "Execute ComfyUI workflows such as image upscaling and video genera
 
 > **In Development**: This feature is in development. Not ready for use.
 
+This workflow extends the base [ComfyUI Workflow](/dev-guide/heurist-sdk/comfyui-workflow) functionality to support image upscaling.
+
 # Example Request
 
 ```python 
@@ -86,27 +88,3 @@ enum WorkflowTaskType {
   Upscaler = 'upscaler'
 }
 ```
-
-# Additional Methods
-### executeWorkflow
-Executes a workflow task without waiting for the result.
-
-``` code
-async executeWorkflow(task: WorkflowTask): Promise<string>
-```
-Returns a Promise that resolves to the task ID.
-
-### queryTaskResult
-Queries the result of a previously executed task.
-
-```code
-async queryTaskResult(task_id: string): Promise<WorkflowTaskResult>
-```
-Returns a Promise that resolves to the task result.
-
-### cancelTask
-Cancels a previously submitted task.
-``` code
-async cancelTask(task_id: string): Promise<{ task_id: string; msg: string }>
-```
-Returns a Promise that resolves to the task ID and message.
