--- a/dev-guide/supported-models.mdx
+++ b/dev-guide/supported-models.mdx
@@ -58,6 +58,9 @@ You can use the following model name as `model_id` in Heurist API/SDK.
 
   * `SDXL`: general-purpose image generation model developed by Stability AI.
 
+### Embedding Models
+  * `BAAI/bge-large-en-v1.5`: a large-scale multilingual embedding model. It converts text into a 1024 dimensional vector representation. The max input length is 512 tokens.
+
 ### Need More Models?
 
 
