--- a/introduction.mdx
+++ b/introduction.mdx
@@ -19,25 +19,40 @@ Heurist is a decentralized AI-as-a-Service cloud. We aggregate compute resources
 
 ### Key Offerings
 
-- **Elasticity in Compute Resources and in Mining Emission**: Heurist dynamically scales compute resources to meet fluctuating demand, and adopts an adaptive token emission mechanism that responds to network activity. Elasticity in these two aspects ensures optimal resource utilization and economic stability.
+- **Elasticity in Compute Resources**: Heurist dynamically scales compute resources to meet fluctuating demand, and adopts an adaptive token emission mechanism that responds to network activity. Elasticity in these two aspects ensures optimal resource utilization and economic stability.
 
-- **Serverless AI-as-a-Service**: Heurist abstracts away the complexities of hardware management. Deploy workloads and access AI services through intuitive APIs and SDKs with a few lines of code, saving the hassle of managing GPU machines.
+- **Serverless AI-as-a-Service**: Heurist abstracts away the complexities of hardware management. Deploy workloads and access AI services through intuitive APIs and SDKs with a few lines of code, saving the hassle of managing GPU machines. We support a wide range of models: LLMs, VLMs, Embedding Models, Image & Video Generation Models, and more.
 
 - **Alignment-Centric Economics (ACE)**: Our economic model aligns all participants towards shared goals: expanding compute resources, optimizing utilization, advancing AI models, and preserving long-term protocol value. Heurist Token is tightly integrated into every interaction in the ecosystem.
 
+- **Heurist Agent Framework**: A framework for building AI agents that connect to AI services in Heurist in a decentralized manner by default. We enable AI agents to interact with each other, acquire knowledge from the world, and execute tasks.
+
 - **Web3-Native AI Ecosystem**: By supporting and incubating AI applications targeted to crypto users, such as finetuned models for Web3 IPs, onchain/offchain agents with crypto knowledge, and AIGC NFTs, Heurist brings cutting-edge AI to the crypto world.
-
-#### About the name: Heurist (pronunciation: hyoo-ri-st)
-
-> Heuristics are part of how the human brain evolved and is wired, allowing individuals to quickly reach reasonable conclusions or solutions to complex problems.
 
 <CardGroup cols={2}>
   <Card
-    title="Heurist Homepage"
+    title="Explore Heurist Ecosystem"
     icon="globe"
-    href="https://www.heurist.ai/"
+    href="https://www.heurist.ai/ecosystem"
   >
-    Visit the homepage of Heurist for more information
+    Discover Heurist Ecosystem
+  </Card>
+  <Card
+    title="Start Building with Heurist"
+    icon="code"
+    href="https://docs.heurist.ai/dev-guide/integration-overview"
+  >
+    Learn how to integrate Heurist AI services
+  </Card>
+</CardGroup>
+
+<CardGroup cols={2}>
+  <Card
+    title="Heurist Agent Framework"
+    icon="code"
+    href="https://agent.heurist.ai/"
+  >
+    Build AI agents with Heurist
   </Card>
   <Card
     title="Contact us"
@@ -47,3 +62,7 @@ Heurist is a decentralized AI-as-a-Service cloud. We aggregate compute resources
     Send an email to team@heurist.xyz for inquiries
   </Card>
 </CardGroup>
+
+#### About the name: Heurist (pronunciation: hyoo-ri-st)
+
+> Heuristics are part of how the human brain evolved and is wired, allowing individuals to quickly reach reasonable conclusions or solutions to complex problems.
