--- a/protocol-overview/mining.mdx
+++ b/protocol-overview/mining.mdx
@@ -3,6 +3,12 @@ title: "Mining"
 description: "Earn Heurist Tokens by running AI inference on your NVIDIA GPUs! Before Heurist Chain is live on mainnet and continuous emission mechanism is implemented, we use points to measure the contribution and allocate rewards in multiple phases."
 ---
 
+## **Latest Updates**
+
+- **Season 2 ended on 2025-01-18** [Read the announcement](https://x.com/heurist_ai/status/1880050799616602434)
+
+Stay tuned for future mining opportunities!
+
 ## 🦙  **Llama Points and**🧚‍♀️ **Waifu Points**
 
 The rewards are distributed in two categories: one for image generation models and the other for Large Language Models (LLMs).
