--- a/protocol-overview/mining/season-2.mdx
+++ b/protocol-overview/mining/season-2.mdx
@@ -1,6 +1,21 @@
 ---
-title: "Season 2 (Ongoing)"
+title: "Season 2 (Ended)"
 ---
+
+## **Latest Updates**
+
+- **Season 2 ended on 2025-01-18**
+
+<a href="https://x.com/heurist_ai/status/1880050799616602434" target="_blank" style={{ textDecoration: 'none', display: 'flex', alignItems: 'center', padding: '5px 10px', border: '1px solid #ddd', borderRadius: '8px', cursor: 'pointer', height: '70px' }}>
+  <img 
+    src="/images/protocol-overview/medium_logo.png"  
+    alt="medium-logo"
+    style={{ width: '30px', marginRight: '10px' }}
+  />
+  <span style={{ fontSize: '14px', color: '#333' }}>
+    Read the announcement about the end of Season 2
+  </span>
+</a>
 
 ## **Detailed rules**
 <a href="https://heuristai.medium.com/heurist-mining-season-2-from-pow-to-depin-bfd1a6fd9a77" target="_blank" style={{ textDecoration: 'none', display: 'flex', alignItems: 'center', padding: '5px 10px', border: '1px solid #ddd', borderRadius: '8px', cursor: 'pointer', height: '70px' }}>
@@ -19,17 +34,11 @@ title: "Season 2 (Ongoing)"
 
 **Waifu Pool (Image Generation)**
 
-* Base rewards: 200,000 HEU tokens (2 bps of total supply) weekly
-
-* Maximum dynamic rewards: Up to 500,000 HEU tokens (5 bps of total supply) weekly, based on the usage of image generation models
+* Rewards: 200,000 HEU tokens (2 bps of total supply) weekly
 
 **Llama Pool (LLM)**
 
-* Base rewards: 200,000 HEU tokens weekly
-
-* Maximum dynamic rewards: Up to 500,000 tokens weekly, based on the usage of LLMs
-
-The base rewards ensure that miners are guaranteed to earn rewards regardless of network usage. This ensures a baseline level of compute resources in the network. **The dynamic rewards will be determined by organic (non-bot) demand for AI inference compute.** We’ll provide dashboards to display this data collected from our inference APIs. This allows the compute power of Heurist network to scale up as more compute demand is onboarded.
+* Rewards: 200,000 HEU tokens weekly
 
 ## Weekly Snapshots
 
