--- a/dev-guide/image-generation/introduction.mdx
+++ b/dev-guide/image-generation/introduction.mdx
@@ -33,6 +33,8 @@ Submit a JSON payload with the following structure:
     }
   },
   "model_id": "Identifier for the image generation model"
+  "deadline": 60,
+  "priority": 1
 }
 ```
 
@@ -60,6 +62,10 @@ Submit a JSON payload with the following structure:
     * `seed` (Integer, optional): Ensures reproducibility of the image generation. Default is -1 for pure randomness.
 
 * `model_id` (String, required): The identifier of the image generation model to use. You can find all supported models in the [Heurist model list](https://github.com/heurist-network/heurist-models/blob/main/models.json). Meaning of model type parameter:`sd15` = Stable Diffusion 1.5 checkpoint.`sdxl10` = SDXL 1.0 checkpoint. `composite15` = Stable Diffusion 1.5 LoRA. `compositexl` = SDXL LoRA
+
+* `priority` (Integer, required): Sets priority in a queue for the job. Default is 1.
+
+* `deadline` (Integer, required): Sets the max-duration of a job. Default is 60.
 
 ### Response Structure
 
