Documentation edits made through Mintlify web editor

--- a/dev-guide/image-generation/introduction.mdx
+++ b/dev-guide/image-generation/introduction.mdx
@@ -65,7 +65,7 @@ Submit a JSON payload with the following structure:
 
 * `priority` (Integer, required): Sets priority in a queue for the job. Default is 1.
 
-* `deadline` (Integer, required): Sets the max-duration of a job. Default is 60.
+* `deadline` (Integer, required): Sets the max duration of a job. Default is 60.
 
 ### Response Structure
 
