add referral code

--- a/dev-guide/examples/eliza.mdx
+++ b/dev-guide/examples/eliza.mdx
@@ -10,7 +10,7 @@ Eliza enables developers to build autonomous AI agents. With Heurist API integra
 Before you begin, make sure you have:
 
 - Completed the [Eliza quickstart](https://elizaos.github.io/eliza/docs/quickstart/)
-- Obtained your [Heurist API key](https://dev-api-form.heurist.ai/)
+- Obtained your api key immediately with referral code `agent` when fill out this form [Heurist API key](https://dev-api-form.heurist.ai/)
 
 ## Environment Configuration
 
