supported-models update

--- a/dev-guide/supported-models.mdx
+++ b/dev-guide/supported-models.mdx
@@ -10,7 +10,9 @@ The following open source models are supported. [View the public model list here
 You can use the following model name as `model_id` in Heurist API/SDK.
 
 ### Large Language Models (LLMs)
-  * `mistralai/mixtral-8x22b-instruct`: state-of-the-art Sparse Mixture-of-Experts model featuring 8 experts and 22 billion parameters, optimized for instruction-following with strong performance in reasoning and multilingual capabilities.
+  * `DeepSeek/DeepSeek-R1`: A research-focused model with strong reasoning and problem-solving capabilities.
+  * `DeepSeek/DeepSeek-Chat`: A conversational AI optimized for natural, multi-turn dialogues, excelling in reasoning and comprehension.
+  * `mistralai/mixtral-8x22b-instruct`: A Sparse Mixture-of-Experts model featuring 8 experts and 22 billion parameters, optimized for instruction-following with strong performance in reasoning and multilingual capabilities.
   * `mistralai/mixtral-8x7b-instruct`: a compact version of the Mixtral family, designed for efficient instruction-based interactions while maintaining a balance between performance and cost.
   * `mistralai/mistral-7b-instruct`: excel in generating fast responses and highly cost-efficient.
   * `meta-llama/llama-3.3-70b-instruct`: the latest Llama 3 model, outperforming many of the available open source and closed chat models on common industry benchmarks.
