--- a/dev-guide/supported-models.mdx
+++ b/dev-guide/supported-models.mdx
@@ -10,8 +10,8 @@ The following open source models are supported. [View the public model list here
 You can use the following model name as `model_id` in Heurist API/SDK.
 
 ### Large Language Models (LLMs)
-  * `DeepSeek/DeepSeek-R1`: A research-focused model with strong reasoning and problem-solving capabilities.
-  * `DeepSeek/DeepSeek-Chat`: A conversational AI optimized for natural, multi-turn dialogues, excelling in reasoning and comprehension.
+  * `deepSeek/deepSeek-r1`: A research-focused model with strong reasoning and problem-solving capabilities.
+  * `deepSeek/deepSeek-chat`: A conversational AI optimized for natural, multi-turn dialogues, excelling in reasoning and comprehension.
   * `mistralai/mixtral-8x22b-instruct`: A Sparse Mixture-of-Experts model featuring 8 experts and 22 billion parameters, optimized for instruction-following with strong performance in reasoning and multilingual capabilities.
   * `mistralai/mixtral-8x7b-instruct`: a compact version of the Mixtral family, designed for efficient instruction-based interactions while maintaining a balance between performance and cost.
   * `mistralai/mistral-7b-instruct`: excel in generating fast responses and highly cost-efficient.
