supportd model update

--- a/dev-guide/supported-models.mdx
+++ b/dev-guide/supported-models.mdx
@@ -10,21 +10,21 @@ The following open source models are supported. [View the public model list here
 You can use the following model name as `model_id` in Heurist API/SDK.
 
 ### Large Language Models (LLMs)
-  * `deepseek/deepseek-r1`: A research-focused model with strong reasoning and problem-solving capabilities.
-  * `deepseek/deepseek-chat`: A conversational AI optimized for natural, multi-turn dialogues, excelling in reasoning and comprehension.
+  * `deepseek/deepseek-r1`: DeepSeek R1 is a groundbreaking open-source AI model that achieves performance comparable to OpenAI's o1 model across math, code, and reasoning tasks, supporting self-verification and reflection, while being more cost-efficient than its competitors.
+  * `deepseek/deepseek-chat`: DeepSeek V3 is a powerful Mixture-of-Experts (MoE) language model with 671B total parameters, activating 37B parameters for each token. It achieves results comparable to Claude Sonnet 3.5.
   * `mistralai/mixtral-8x22b-instruct`: A Sparse Mixture-of-Experts model featuring 8 experts and 22 billion parameters, optimized for instruction-following with strong performance in reasoning and multilingual capabilities.
-  * `mistralai/mixtral-8x7b-instruct`: a compact version of the Mixtral family, designed for efficient instruction-based interactions while maintaining a balance between performance and cost.
-  * `mistralai/mistral-7b-instruct`: excel in generating fast responses and highly cost-efficient.
-  * `meta-llama/llama-3.3-70b-instruct`: the latest Llama 3 model, outperforming many of the available open source and closed chat models on common industry benchmarks.
+  * `mistralai/mixtral-8x7b-instruct`: A compact version of the Mixtral family, designed for efficient instruction-based interactions while maintaining a balance between performance and cost.
+  * `mistralai/mistral-7b-instruct`: Excel in generating fast responses and highly cost-efficient.
+  * `meta-llama/llama-3.3-70b-instruct`: The latest Llama 3 model, outperforming many of the available open source and closed chat models on common industry benchmarks.
   * `nvidia/llama-3.1-nemotron-70b-instruct`: specialized version of the Llama model tailored by NVIDIA for complex instruction-following tasks, delivering high-quality, human-like responses across a variety of applications while leveraging advanced NVIDIA AI technologies for optimal performance and scalability.
-  * `qwen/qwen-2.5-coder-32b-instruct`: state-of-the-art open-source code model, matching the coding capabilities of GPT-4o.
-  * `hermes-3-llama3.1-8b`: flagship Hermes LLM trained by Nous Research, with advanced agentic capabilities, enhanced roleplaying, reasoning, multi-turn conversation, long context coherence and agentic abilities. **Uncensored**. **Supports tool calling**
+  * `qwen/qwen-2.5-coder-32b-instruct`: State-of-the-art open-source code model, matching the coding capabilities of GPT-4o.
+  * `hermes-3-llama3.1-8b`: Flagship Hermes LLM trained by Nous Research, with advanced agentic capabilities, enhanced roleplaying, reasoning, multi-turn conversation, long context coherence and agentic abilities. **Uncensored**. **Supports tool calling**
   * `qwen/qwen-2.5-coder-32b-instruct`: Qwen2.5-Coder is the latest series of Code-Specific Qwen large language models (formerly known as CodeQwen)
 
 ### Image Generation Models
 
   * `HeuristLogo`: Flux LoRA that can generate the logo of Heurist. Trigger word: `Heuristai logo` or `hexagonal logo`.
-  * `FLUX.1-dev`: state-of-the-art open source image generation model that excels at a variety of image styles.
+  * `FLUX.1-dev`: State-of-the-art open source image generation model that excels at a variety of image styles.
 
   * `PepeXL`: SDXL LoRA that can generate the meme frog, Pepe. Trigger word: `Pepe`. Recommended words: `pepe_frog, meme, web comic` and add `cartoon` or `3d render`
   * `Zeek`: SDXL LoRA for ZKsync's mascot cat, Zeek. Trigger word: `zeek`. We recommend using `zeek wearing ...` or `zeek disguised as ...`
@@ -53,10 +53,10 @@ You can use the following model name as `model_id` in Heurist API/SDK.
 
   * `SDXLUnstableDiffusersV11`: SDXL checkpoint that enhances SDXL capabilities in creating vibrant arts, designs and photo-realistic images.
 
-  * `SDXL`: general-purpose image generation model developed by Stability AI.
+  * `SDXL`: General-purpose image generation model developed by Stability AI.
 
 ### Embedding Models
-  * `BAAI/bge-large-en-v1.5`: a large-scale multilingual embedding model. It converts text into a 1024 dimensional vector representation. The max input length is 512 tokens.
+  * `BAAI/bge-large-en-v1.5`: A large-scale multilingual embedding model. It converts text into a 1024 dimensional vector representation. The max input length is 512 tokens.
 
 ### Need More Models?
 
