--- a/ecosystem/imagine.mdx
+++ b/ecosystem/imagine.mdx
@@ -29,6 +29,14 @@ Prompt weighting allows you to emphasize or de-emphasize certain parts of a prom
 
 See this [advanced guide](../dev-guide/supported-models#understanding-image-prompting) for more information.
 
+#### API Access
+
+All models are available for API access. See [API documentation](../dev-guide/image-generation/introduction) for more information.
+
+#### Video Generation
+
+We support Hunyuan video generation. The generation time is typically a few minutes. Video generation is also available for API access, see [Text-to-Video API documentation](../dev-guide/heurist-sdk/comfyui-txt2vid).
+
 ### zkImagine NFT
 
 [zkImagine](https://element.market/collections/zkimagine?search%5Btoggles%5D%5B0%5D=ALL) is a NFT collection on ZKsync Era mainnet. You can mint your AI image into zkImagine NFT to permanently store it in your digital wallet. The supply is unlimited. Creators can launch sub-collections from the zkImagine collection, and turn your creativity into your customized NFT collection.
