--- a/introduction.mdx
+++ b/introduction.mdx
@@ -15,13 +15,13 @@ title: "Welcome to Heurist"
 
 ## Introducing Heurist
 
-Heurist is a decentralized AI-as-a-Service cloud. We aggregate compute resources from individual GPU owners and data centers to provide serverless AI services. Heurist’s API-first infrastructure elinimates the need for developers to manage GPU machines, and enables cost-efficient, censorship-free AI integration with APIs.
+Heurist is a decentralized AI-as-a-Service cloud. We aggregate compute resources from trusted DePIN partners to provide serverless AI services. Heurist’s API-first infrastructure elinimates the need for developers to manage GPU machines, and enables cost-efficient, censorship-free AI integration with APIs.
 
 ### Key Offerings
 
-- **Elasticity in Compute Resources**: Heurist dynamically scales compute resources to meet fluctuating demand, and adopts an adaptive token emission mechanism that responds to network activity. Elasticity in these two aspects ensures optimal resource utilization and economic stability.
+- **Serverless AI-as-a-Service**: Heurist abstracts away the complexities of hardware management. Deploy workloads and access AI services through intuitive APIs and SDKs with a few lines of code, saving the hassle of managing GPU machines. We support a wide range of models: LLMs, VLMs, Embedding Models, Image & Video Generation Models, and more. Start building with our [Developer Guide](https://docs.heurist.ai/dev-guide/integration-overview).
 
-- **Serverless AI-as-a-Service**: Heurist abstracts away the complexities of hardware management. Deploy workloads and access AI services through intuitive APIs and SDKs with a few lines of code, saving the hassle of managing GPU machines. We support a wide range of models: LLMs, VLMs, Embedding Models, Image & Video Generation Models, and more.
+- **Elasticity in Compute Resources**: Heurist dynamically scales compute resources to meet fluctuating demand, and adopts an adaptive token emission mechanism that responds to network activity. Elasticity in these two aspects ensures optimal resource utilization and economic stability.
 
 - **Alignment-Centric Economics (ACE)**: Our economic model aligns all participants towards shared goals: expanding compute resources, optimizing utilization, advancing AI models, and preserving long-term protocol value. Heurist Token is tightly integrated into every interaction in the ecosystem.
 
