--- a/protocol-overview/tokenomics.mdx
+++ b/protocol-overview/tokenomics.mdx
@@ -83,28 +83,8 @@ The initial price will be determined by the average trading price of Imaginaries
 
 Before the mainnet is activated and a continuous emission is implemented (miners get token rewards per block), we plan to allocate pre-mainnet mining rewards in 3 phases.
 
-**Phase 1**: 5% of total token supply airdropped to all miners at a snapshot taken at July 19th, 2024. See [Season 1 (Ended)](/protocol-overview/mining/season-1)
+**Phase 1**: (Completed. Rewards already distributed) 50M HEU airdropped to all miners at a snapshot taken at July 19th, 2024. See [Season 1 (Ended)](/protocol-overview/mining/season-1)
 
-**Phase 2**: a dynamic amount of tokens, min 400,000 per week and max 2,000,000 per week, accumulated to all miners at weekly snapshots. See [Season 2 (Ongoing)](/protocol-overview/mining/season-2)
+**Phase 2**: (Completed. Rewards to be distributed in March 2025) 10M HEU airdropped to all miners at weekly snapshots. See [Season 2 (Ended)](/protocol-overview/mining/season-2)
 
-**Phase 3**: a dynamic amount of tokens (amount TBD) accumulated to all miners in a continuous stream.
-
-The data and insights collected from each phase will be critical to help calibrate and determine the mainnet emission mechanism.
-
-After these 3 phases, mainnet emission will go live. Team and the protocol governance houses reserve the right to adjust the following emission schedules.
-
-The emission rate of mainnet is determined by two parameters
-
-* Maximum emission rate: 5% per year
-
-* Baseline emission rate: 1.25 per year
-
-The actual emission rate is dynamically decided by the protocol revenue.
-
-<img 
-    src="..\images\protocol-overview\anualized_emission.jpg" 
-    alt="anualized_emission"
-    style={{ width: '100%', display: 'block', margin: '0 auto' }}
-  />
-
-During periods of low demand, the lower emission rate prevents oversupply of resources. As demand increases, the rising emission rate attracts more providers to the network. This dynamic emission mechanism aims to achieve elasticity in both token distribution and compute resource provision by providing a flexible and responsive way to incentivize network participation.
+**Phase 3**: (In Development) a dynamic amount of tokens (amount TBD) accumulated to all miners in a continuous stream.
