--- a/protocol-overview/credits.mdx
+++ b/protocol-overview/credits.mdx
@@ -42,9 +42,11 @@ Pricing is in credits per million tokens. Each model has separate pricing for in
 | mistralai/mixtral-8x7b-instruct | 25 | 25 |
 | mistralai/mixtral-8x22b-instruct | 100 | 100 |
 | meta-llama/llama-3.3-70b-instruct | 15 | 30 |
-| hermes-3-llama3.1-8b | 5 | 10 |
+| NousResearch/Hermes-3-Llama-3.1-8B | 5 | 10 |
 | deepseek/deepseek-r1 | 800 | 800 |
-| deepseek/deepseek-chat | 90 | 90 |
+| deepseek/deepseek-v3 | 100 | 100 |
+| deepseek/deepseek-r1-distill-llama-70b | 80 | 80 |
+| NaniDAO/deepseek-r1-qwen-2.5-32B-ablated | 30 | 30 |
 | mistralai/mistral-small-24b-instruct | 30 | 30 |
 
 For example, if you send a prompt of 1,000 tokens to Mixtral 8x7B and receive a 500-token response:
