--- a/dev-guide/supported-models.mdx
+++ b/dev-guide/supported-models.mdx
@@ -11,7 +11,9 @@ You can use the following model name as `model_id` in Heurist API/SDK.
 
 ### Large Language Models (LLMs)
   * `deepseek/deepseek-r1`: DeepSeek R1 is a groundbreaking open-source AI model that achieves performance comparable to OpenAI's o1 model across math, code, and reasoning tasks, supporting self-verification and reflection, while being more cost-efficient than its competitors.
-  * `deepseek/deepseek-chat`: DeepSeek V3 is a powerful Mixture-of-Experts (MoE) language model with 671B total parameters, activating 37B parameters for each token. It achieves results comparable to Claude Sonnet 3.5.
+  * `deepseek/deepseek-v3`: DeepSeek V3 is a powerful Mixture-of-Experts (MoE) language model with 671B total parameters, activating 37B parameters for each token. It achieves results comparable to Claude Sonnet 3.5.
+  * `deepseek/deepseek-r1-distill-llama-70b`: A distilled version of DeepSeek R1, using Llama 3 70B as the base model. It achieves results comparable to DeepSeek R1 but much more cost-efficient and faster.
+  * `NaniDAO/deepseek-r1-qwen-2.5-32B-ablated`: A distilled version of DeepSeek R1, with using Qwen 2.5 32B as the base model. It uses ablation technique to remove refusal mechanism to make the model always generate responses. **Uncensored**.
   * `mistralai/mixtral-8x22b-instruct`: A Sparse Mixture-of-Experts model featuring 8 experts and 22 billion parameters, optimized for instruction-following with strong performance in reasoning and multilingual capabilities.
   * `mistralai/mixtral-8x7b-instruct`: A compact version of the Mixtral family, designed for efficient instruction-based interactions while maintaining a balance between performance and cost.
   * `mistralai/mistral-7b-instruct`: Excel in generating fast responses and highly cost-efficient.
@@ -20,6 +22,10 @@ You can use the following model name as `model_id` in Heurist API/SDK.
   * `qwen/qwen-2.5-coder-32b-instruct`: State-of-the-art open-source code model, matching the coding capabilities of GPT-4o.
   * `hermes-3-llama3.1-8b`: Flagship Hermes LLM trained by Nous Research, with advanced agentic capabilities, enhanced roleplaying, reasoning, multi-turn conversation, long context coherence and agentic abilities. **Uncensored**. **Supports tool calling**
   * `qwen/qwen-2.5-coder-32b-instruct`: Qwen2.5-Coder is the latest series of Code-Specific Qwen large language models (formerly known as CodeQwen)
+
+### Note on uncensored models:
+
+The models marked as **Uncensored** are finetuned with specific datasets to eliminate censorship. For other models, it's possible to avoid censorship by using jailbreaking prompts, which works in most cases.
 
 ### Image Generation Models
 
@@ -59,6 +65,5 @@ You can use the following model name as `model_id` in Heurist API/SDK.
   * `BAAI/bge-large-en-v1.5`: A large-scale multilingual embedding model. It converts text into a 1024 dimensional vector representation. The max input length is 512 tokens.
 
 ### Need More Models?
-
 
 Any image generation models from [Civitai](https://civitai.com/) and LLMs from [HuggingFace](https://huggingface.co/) can be supported upon request. If you're interested in hosting your models on Heurist, or if you want customized models that adapts to your specific use cases, please contact us at **team@heurist.xyz**
