adjust LLM pricing

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -21,13 +21,13 @@ Heurist is a decentralized AI-as-a-Service cloud. We aggregate compute resources
 
 - **Serverless AI-as-a-Service**: Heurist abstracts away the complexities of hardware management. Deploy workloads and access AI services through intuitive APIs and SDKs with a few lines of code, saving the hassle of managing GPU machines. We support a wide range of models: LLMs, VLMs, Embedding Models, Image & Video Generation Models, and more. Start building with our [Developer Guide](https://docs.heurist.ai/dev-guide/integration-overview).
 
+- **Heurist Agent Framework**: A framework for building AI agents that connect to AI services in Heurist in a decentralized manner by default. We enable AI agents to interact with each other, acquire knowledge from the world, and execute tasks.
+
 - **Elasticity in Compute Resources**: Heurist dynamically scales compute resources to meet fluctuating demand, and adopts an adaptive token emission mechanism that responds to network activity. Elasticity in these two aspects ensures optimal resource utilization and economic stability.
 
 - **Alignment-Centric Economics (ACE)**: Our economic model aligns all participants towards shared goals: expanding compute resources, optimizing utilization, advancing AI models, and preserving long-term protocol value. Heurist Token is tightly integrated into every interaction in the ecosystem.
 
-- **Heurist Agent Framework**: A framework for building AI agents that connect to AI services in Heurist in a decentralized manner by default. We enable AI agents to interact with each other, acquire knowledge from the world, and execute tasks.
-
-- **Web3-Native AI Ecosystem**: By supporting and incubating AI applications targeted to crypto users, such as finetuned models for Web3 IPs, onchain/offchain agents with crypto knowledge, and AIGC NFTs, Heurist brings cutting-edge AI to the crypto world.
+- **Web3-Native AI Ecosystem**: By supporting and incubating AI applications targeted to crypto users, such as finetuned models for Web3 IPs, onchain/offchain agents with crypto expertise, and AIGC NFTs, Heurist brings cutting-edge AI to the crypto world.
 
 <CardGroup cols={2}>
   <Card
