change mining emission descriptions

--- a/protocol-overview/tokenomics.mdx
+++ b/protocol-overview/tokenomics.mdx
@@ -6,7 +6,7 @@ title: "Tokenomics"
 
 HEU (pronounced as "hue") is the native token of Heurist Protocol. The maximum supply is 1,000,000,000. HEU token provides a default mechanism to store and exchange value in the Heurist ecosystem. The utilities include:
 
-* Pay for compute resources
+* Pay for AI services
 
 * Stake to secure the network and earn protocol fees
 
@@ -27,7 +27,7 @@ HEU (pronounced as "hue") is the native token of Heurist Protocol. The maximum s
 | Liquidity                               | 28,000,000   | 2.80              | 100          | 0              | 0                      |
 | Marketing                               | 18,500,000   | 1.85              | 100          | 0              | 0                      |
 | Imaginaries NFT Airdrop                 | 12,845,000   | 1.28              | 100          | 0              | 0                      |
-| Grants Program                          | 300,000      | 0.03              | 100          | 0              | 0                      |
+| Pre-TGE Grants                          | 300,000      | 0.03              | 100          | 0              | 0                      |
 | KOLs                                    | 6,500,000    | 0.65              | 20           | 0              | 6                      |
 | Unallocated Grants                      | 6,855,000    | 0.69              | 0            | 3              | 0                      |
 | Private Angels and VC                   | 60,000,000   | 6.00              | 0            | 3              | 24                     |
@@ -35,56 +35,10 @@ HEU (pronounced as "hue") is the native token of Heurist Protocol. The maximum s
 | Mining (Exclusing Season 1)             | 500,000,000  | 50.00             | 0            | 3              | 120                    |
 | Protocol Treasury                       | 167,000,000  | 16.70             | 0            | 6              | 48                     |
 
-### Initial Distribution
-
-| Category                          | Initial HEU Supply |
-| --------------------------------- | ------------------ |
-| Airdrop to miners                 | 50000000           |
-| Airdrop to Imaginaries            | 12845000           |
-| Airdrop to OG and ZKsync ecosystem| 1000000            |
-| Grants                            | 300000             |
-| KOLs                              | 1300000            |
-| Initial Liquidity (DEX and CEX)   | 28000000           |
-| Marketing Reserve                 | 17500000           |
-
-{/*<img 
-    src="..\images\protocol-overview\heu_supply.png" 
-    alt="heu_supply"
-    style={{ width: '80%', display: 'block', margin: '0 auto' }}
-  />*/}
-
-{/* ### FAQ
-
-* Where will the token be traded?
-
-DEX: Uniswap V3 on Ethereum mainnet and ZKsync
-
-CEX: To be announced
-
-* What is the marketing reserve?
-
-It is for exchange listing, airdrop to the community, KOL marketing, giveaways, etc. Not going to be liquid all at once.
-
-* What's the plan for Imaginaries NFT airdrop?
-
-We will continue to give away NFTs to the top community contributors and campaign winners (See [Imaginaries NFT](/ecosystem/imaginaries-nft)). The above distribution sheet is based on a projection of 400 liquid NFTs at TGE. The NFT giveaway will continue after the TGE.
-
-* How to participate in IDO/IEO/public sale?
-
-There will be no public sale.
-
-* What's the initial price?
-
-The initial price will be determined by the average trading price of Imaginaries NFT over a period of time before TGE. This ensures a fair pre-market price discovery. */}
-
-### Dynamic Emission for Compute Providers
-
-50% of total HEU token supply (excluding season 1 testnet mining) are allocated to protocol emissions, designed to ensure the supply of compute resources and attract new community members, similar to Proof of Work (PoW) mining. However, DePIN protocols like Heurist differ from PoW systems in one crucial aspect: the physical resources supplied (in Heurist’s case, GPUs) should match the real demand for these resources. Heurist balance the compute supply with the demand by controlling the protocol emission rate based on protocol revenue, defined as the sum of compute payments from users.
-
-Before the mainnet is activated and a continuous emission is implemented (miners get token rewards per block), we plan to allocate pre-mainnet mining rewards in 3 phases.
+### Mining Emission
 
 **Phase 1**: (Completed. Rewards already distributed) 50M HEU airdropped to all miners at a snapshot taken at July 19th, 2024. See [Season 1 (Ended)](/protocol-overview/mining/season-1)
 
-**Phase 2**: (Completed. Rewards to be distributed in March 2025) 10M HEU airdropped to all miners at weekly snapshots. See [Season 2 (Ended)](/protocol-overview/mining/season-2)
+**Phase 2**: (Completed. Rewards to be distributed in March 2025) 10M HEU airdropped to all miners from July 19th, 2024 to Janurary 18th, 2025. See [Season 2 (Ended)](/protocol-overview/mining/season-2)
 
-**Phase 3**: (In Development) a dynamic amount of tokens (amount TBD) accumulated to all miners in a continuous stream.
+**Phase 3**: (Not Started) Stay tuned for future mining opportunities.
