--- a/protocol-overview/contract-addresses.mdx
+++ b/protocol-overview/contract-addresses.mdx
@@ -10,6 +10,12 @@ title: "Contract Addresses"
 | HEU    | ZKsync Era  |https://explorer.zksync.io/address/0xAbEc5eCBe08b6c02F5c9A2fF82696e1E7dB6f9bf|
 | HEU    | Base        |https://basescan.org/address/0xEF22cb48B8483dF6152e1423b19dF5553BbD818b|
 
+# Staking Contracts
+
+| Name   | Network     | Link |
+|--------|-------------|------|
+| HEU    | Base        |https://basescan.org/address/0xfa13536bc4181db19fe93da82115f43f5c95761c|
+
 # Airdrop Claim Contracts
 
 | Network     | Link |
